[package]
name = "boringchain"
version = "0.1.0"
edition = "2024"

[dependencies]
boringtun = { git = "https://github.com/firezone/boringtun", branch = "master" }
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.15.1", features = ["base64"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "proto-ipv4"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
